--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <header>
             <div class="center">
-                <img src="./img /me.jpg"></img>
+                <img src="./me.jpg"></img>
             </div>
             <h1>V.S-CODE</h1>
             <h2>Desenvolvedor Junior</h2>
@@ -92,15 +92,15 @@
 
         <footer>
             <a href="https://github.com/VitorSouza2004?tab=repositories"target="_blank" rel="noopener noreferrer">
-                <img src="./img /unnamed.png"></img>
+                <img src="./unnamed.png"></img>
                 <p>Github</p>
             </a>
             <a href="https://www.linkedin.com/in/adriana-saty-bertelli/" target="_blank" rel="noopener noreferrer">
-                <img src="./img /download.png"></img>
+                <img src="./download.png"></img>
                 <p>Linkedin</p>
             </a>
             <a href="https://www.youtube.com/c/AdrianaSaty" target="_blank" rel="noopener noreferrer">
-                <img src="./img /channels4_profile.jpg"></img>
+                <img src="./channels4_profile.jpg"></img>
                 <p>Youtube</p>
             </a>
         </footer>
