--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
   <title>Project</title>
    <link rel="stylesheet" href="index.css">
    <div class="img">
-     <img src="./img /cybe.jpg" width="720px" height="720px">
+     <img src="./cybe.jpg" width="720px" height="720px">
      </div>
 </head>
 <body>
