--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
             <header class="center">
                 <div>
-                    <img src="./img /me.jpg"></img>
+                    <img src="./me.jpg"></img>
                 </div>
                 <h1>Entre em contato!</h1>
             </header>
