--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 </div>
                 <h1>Entre em contato!</h1>
             </header>
-            <form class="contact-form" action="https://formsubmit.co/vl0235387@gmail.com" method="POST">
+            <form class="contact-form" action="https://formsubmit.co/bmsvitor3@gmail.com" method="POST">
                 <div>
                     <label for="email">E-mail</label>
                     <input type="email" placeholder="E-mail" name="email" required>
