--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 </div>
                 <h1>Entre em contato!</h1>
             </header>
-            <form class="contact-form" action="https://formsubmit.co/bmsvitor3@gmail.com" method="POST">
+            <form class="contact-form" action="https://formsubmit.co/vl0235387@gmail.com" method="POST">
                 <div>
                     <label for="email">E-mail</label>
                     <input type="email" placeholder="E-mail" name="email" required>
@@ -41,7 +41,7 @@
                     <input type="text" placeholder="Mensagem" id="message" name="message" required>
                 </div>
                 <button type="submit">Enviar</button>
-                <input type="hidden" name="_next" value="https://souzacomandos.github.io/Meu-Portif-lio-/contact.html">
+                <input type="hidden" name="_next" value="https://github.com/VitorSouza2004">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
         </div>
