--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <input type="text" placeholder="Mensagem" id="message" name="message" required>
                 </div>
                 <button type="submit">Enviar</button>
-                <input type="hidden" name="_next" value="https://github.com/VitorSouza2004">
+                <input type="hidden" name="_next" value="https://souzacomandos.github.io/Meu-Portif-lio-/contact.html">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
         </div>
