--- a/contact.html
+++ b/contact.html
@@ -45,4 +45,5 @@
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
         </div>
-    </body
+    </body>
+</html>
