--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <img src="./download.png"></img>
                 <p>Linkedin</p>
             </a>
-            <a href="https://www.youtube.com/c/AdrianaSaty" target="_blank" rel="noopener noreferrer">
+            <a href="https://youtube.com/channel/UCFFtunvEFOtoJVYGxzQyA-g" target="_blank" rel="noopener noreferrer">
                 <img src="./channels4_profile.jpg"></img>
                 <p>Youtube</p>
             </a>
